Tests for change feed implementation. All tests passing.